PyOmniTS/slurm-72954.out
Traceback (most recent call last):
  File "/mnt/home/khaledm/PyOmniTS/main.py", line 7, in <module>
    from exp.exp_main import Exp_Main
  File "/mnt/home/khaledm/PyOmniTS/exp/exp_main.py", line 163
    return x
    ^^^^^^^^
SyntaxError: 'return' outside function
